--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
                             "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css",
                             "node_modules/font-awesome/scss/font-awesome.scss",
+                            "node_modules/roboto-fontface/css/roboto/roboto-fontface.css",
                             "src/styles.scss"
                         ],
                         "scripts": [
